--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +22,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/
+    - assets/icons/
   uses-material-design: true
   fonts:
     - family: MarkPro
