--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,19 @@ environment:
   sdk: ">=2.17.5 <3.0.0"
 
 dependencies:
+
   flutter:
     sdk: flutter
 
+  json_annotation: ^4.6.0
+  freezed_annotation: ^2.1.0
+  http: ^0.13.5
+  get_it: ^7.2.0
+
 dev_dependencies:
+  build_runner: any
+  json_serializable: any
+  freezed: ^2.1.0+1
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
