Main screen is completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   freezed_annotation: ^2.1.0
   http: ^0.13.5
   get_it: ^7.2.0
+  carousel_slider: ^4.1.1
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   build_runner: any
@@ -37,6 +39,7 @@ flutter:
     - family: MarkPro
       fonts:
         - asset: fonts/Mark-Pro.ttf
+        - asset: fonts/Mark-Pro-Bold.ttf
     - family: SFPro
       fonts:
         - asset: fonts/SFPRODISPLAYREGULAR.OTF
